# pycones21-testing

./: .gitignore  README.md  pyproject.toml
pycones21/: .coverage  data_models.py  fake_store.py  github_client.py  service.py  slides.md  theme.json  user_store.py
pycones21/class_test/: 7-class-fun.py
pycones21/exceptions/: 15-raise-exception.py  16-raise-exception-ok.py
pycones21/isolation/: 1-patch.py  2-patch-ok.py  3-patch-ok.py  4-db.py  5-db-ok.py  6-share-state.py
pycones21/mock_patch/: 10-mock-call.py  11-mock-call-ok.py  12-patch-target.py  14-patch-hell.py  8-mocker.py  9-mocker.py
pycones21/time_examples/: 16-dates.py  17-dates.py
