[tool.poetry]
name = "pycones21-testing"
version = "0.1.0"
description = "[Pycones21] Python testing best practices - Code examples"
authors = ["Ismael Mendonça <irmt06@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^6.2.5"
requests = "^2.26.0"
pytest-xdist = "^2.4.0"
pytest-cov = "^2.12.1"
pytest-mock = "^3.6.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
